Kate's update on test data

--- a/notebooks/metadata.ipynb
+++ b/notebooks/metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "import sys\r\n",
     "sys.path.append(\"../scripts\")\r\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "DATASET_PATH= \"../data/train/wav\"\r\n",
     "TEXT_PATH=\"../data/train/text\"\r\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "source": [
     "df['audio']=labels\r\n",
     "df.head()"
@@ -119,14 +119,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "source": [
     "df.shape"
    ],
@@ -139,14 +139,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "source": [
     "meta=df[:5090]\r\n",
     "meta.tail()"
@@ -225,14 +225,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
     "df.to_csv(\"../data/metadata.csv\",index=False)\r\n",
     "meta.to_csv(\"../data/metadata2.csv\",index=False)"
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "source": [
     "test_path = \"../data/test/wav5\"\r\n",
     "test_text_path = \"../data/test/text\"\r\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "source": [
     "test_data = pd.read_fwf(test_text_path,header=None)\r\n",
     "test_data.head()\r\n"
@@ -358,14 +358,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
     "test_data.shape"
    ],
@@ -378,14 +378,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "source": [
     "test_data.isnull().sum()"
    ],
@@ -403,14 +403,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "source": [
     "test_data['text'] = test_data[test_data.columns[1:]].apply(\r\n",
     "    lambda x: ''.join(x.dropna().astype(str)),\r\n",
@@ -495,14 +495,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "source": [
     "len(test_audio)"
    ],
@@ -515,14 +515,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 13
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "source": [
     "import os\r\n",
     "files = []\r\n",
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "source": [
     "file = [x.strip('._') for x in files]\r\n",
     "file = [x.strip('.wav') for x in file]\r\n",
@@ -619,16 +619,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "source": [
-    "test = pd.merge(test_data,data,on='file')\r\n",
+    "test = pd.merge(test_data,data,on='file',how='inner')\r\n",
     "test.drop(['file'],axis=1,inplace=True)\r\n",
     "test.head()"
    ],
@@ -706,14 +706,36 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 16
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
+   "source": [
+    "test.isnull().sum()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "text     0\n",
+       "audio    0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "source": [
     "test.to_csv(\"../data/test.csv\")"
    ],
